Clear form when it's done

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stuff/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="stuff/deparam.js"></script>
-    <script src="stuff/app.js"></script>
+    <script src="stuff/strmr.js"></script>
 </head>
 <body>
 <div class="container">
