--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,7 @@
     <title>strmr</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <style>[ng-cloak] {
-        display: none;
-    }</style>
+    <style>[ng-cloak] {display: none;}</style>
     <script src="jspm/system.js"></script>
     <script src="system.conf.js"></script>
     <script>
@@ -20,6 +15,7 @@
         navigator.registerProtocolHandler("magnet", window.location.origin + "/?uri=%s", "Magnet Links");
 
         System.import('app/style');
+
         System.import('app/strmr').then(function (module) {
             angular.bootstrap(document, [module.name]);
         });
