--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>[ng-cloak] {display: none;}</style>
     <script src="jspm/system.js"></script>
-    <script src="system.conf.js"></script>
+    <script src="config.js"></script>
     <script>
 
         // This is what allows us to register this site as a
@@ -15,7 +15,6 @@
         navigator.registerProtocolHandler("magnet", window.location.origin + "/?uri=%s", "Magnet Links");
 
         System.import('app/style');
-
         System.import('app/strmr').then(function (module) {
             angular.bootstrap(document, [module.name]);
         });
@@ -28,7 +27,20 @@
 
             <h1>strmr</h1>
 
-            <form name="ctrl.form">
+            <div ng-if="!ctrl.auth.loggedIn">
+                <a class="btn btn-primary" ng-click="ctrl.auth.login()">Login</a>
+            </div>
+
+            <div ng-if="ctrl.auth.loggedIn">
+                <a class="btn btn-primary" ng-click="ctrl.auth.logout()">Logout</a>
+
+                <div ng-if="!ctrl.auth.valid">
+                    You are logged in, but you do not have access to this app.
+                </div>
+            </div>
+
+            <form name="ctrl.form" ng-if="ctrl.auth.valid">
+
 
                 <div ng-cloak ng-show="ctrl.state.part1">
 
