--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <title>strmr</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <style>[ng-cloak] {display: none;}</style>
     <script src="jspm/system.js"></script>
     <script src="config.js"></script>
