Lambda function to emulate HTTP indexes

--- a/front/index.html
+++ b/front/index.html
@@ -84,6 +84,7 @@
                     <div class="form-group" ng-class="{busy:ctrl.state.busy}">
                         <button
                             type="button"
+                            focus-on="save"
                             class="btn btn-primary"
                             ng-disabled="ctrl.state.busy"
                             ng-click="ctrl.save()">
