--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,9 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <style>[ng-cloak] {display: none;}</style>
+    <style>[ng-cloak] {
+        display: none;
+    }</style>
     <script src="jspm/system.js"></script>
     <script src="config.js"></script>
     <script>
@@ -24,7 +26,7 @@
 <body ng-cloak ng-controller="AppController as ctrl">
 <div class="container">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1">
 
             <h1>strmr</h1>
 
@@ -32,12 +34,13 @@
                 <div ng-if="!ctrl.auth.loggedIn || ctrl.auth.loggedIn && ctrl.auth.busy"
                      ng-class="{busy: ctrl.auth.busy}">
                     <button
-                       tabindex="1"
-                       focus-on="login"
-                       class="btn btn-primary"
-                       ng-disabled="ctrl.state.login"
-                       ng-click="ctrl.login()">
-                       <i class="fa fa-spinner fa-spin"></i> Login</button>
+                            tabindex="1"
+                            focus-on="login"
+                            class="btn btn-primary"
+                            ng-disabled="ctrl.state.login"
+                            ng-click="ctrl.login()">
+                        <i class="fa fa-spinner fa-spin"></i> Login
+                    </button>
                 </div>
 
                 <div ng-if="!ctrl.auth.busy && ctrl.auth.loggedIn">
@@ -80,8 +83,101 @@
                     </div>
                 </div>
 
+
                 <div ng-cloak ng-show="ctrl.state.part2">
 
+                    <hr>
+
+                    <div class="row">
+
+                        <div class="col-md-5">
+
+                            <div class="poster">
+                                <div class="innards" ng-if="!ctrl.poster.url">
+                                    <div class="cssload-loader"></div>
+                                </div>
+
+                                <img class="innards" ng-src="{{ctrl.poster.url}}">
+
+                            </div>
+
+                            <table class="table table-striped table-sm">
+                                <tr>
+                                    <td>Resolution</td>
+                                    <td>{{ctrl.magnet.properties.resolution }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Quality</td>
+                                    <td>{{ctrl.magnet.properties.quality }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Codec</td>
+                                    <td>{{ctrl.magnet.properties.codec }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Group</td>
+                                    <td>{{ctrl.magnet.properties.group }}</td>
+                                </tr>
+                            </table>
+
+                        </div>
+
+                        <div class="col-md-7">
+                            <h2>{{ ctrl.magnet.properties.title }}
+                                <small>{{ ctrl.magnet.properties.year }}</small>
+                            </h2>
+
+                            <p class="blockquote">{{ctrl.info.Plot}}</p>
+
+                            <table class="table table-striped">
+                                <tr>
+                                    <td width="30%">Rated</td>
+                                    <td>{{ctrl.info.Rated }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Runtime</td>
+                                    <td>{{ctrl.info.Runtime }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Language</td>
+                                    <td>{{ctrl.info.Language }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Released</td>
+                                    <td>{{ctrl.info.Released }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Genre</td>
+                                    <td>{{ctrl.info.Genre }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Rating</td>
+                                    <td>{{ctrl.info.imdbRating }} <small>out of {{ctrl.info.imdbVotes}} votes</small></td>
+                                </tr>
+                                <tr>
+                                    <td>Director</td>
+                                    <td>{{ctrl.info.Director }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Featuring</td>
+                                    <td>{{ctrl.info.Actors }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Link</td>
+                                    <td><a target="_blank"
+                                           href="http://imdb.com/title/{{ctrl.info.imdbID}}">Open this Movie in IMDB</a>
+                                    </td>
+                                </tr>
+                            </table>
+
+
+                        </div>
+
+
+                    </div>
+
+
+                    <!--
                     <div class="form-group col-m">
                         <label>Path</label>
                         <input
@@ -91,19 +187,29 @@
                                 ng-model="ctrl.magnet.firekey"
                                 class="form-control">
                     </div>
+                    -->
 
-                    <div class="form-group" ng-class="{busy:ctrl.state.busy}">
-                        <button
-                            type="button"
-                            focus-on="save"
-                            class="btn btn-primary"
-                            ng-disabled="ctrl.state.busy"
-                            ng-click="ctrl.save()">
-                            <i class="fa fa-spinner fa-spin"></i> Save
-                        </button>
-                        <button type="button" ng-click="ctrl.reset()" class="btn btn-link">
-                            Reset
-                        </button>
+                    <div class="row">
+
+                        <div class="col-md-12">
+
+                            <hr>
+
+                            <div class="form-group" ng-class="{busy:ctrl.state.busy}">
+                                <button
+                                        type="button"
+                                        focus-on="save"
+                                        class="btn btn-primary"
+                                        ng-disabled="ctrl.state.busy"
+                                        ng-click="ctrl.save()">
+                                    <i class="fa fa-spinner fa-spin"></i> Add to Your Library
+                                </button>
+                                <button type="button" ng-click="ctrl.reset()" class="btn btn-link">
+                                    Reset
+                                </button>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
