--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,6 @@
     <script src="jspm/system.js"></script>
     <script src="config.js"></script>
     <script>
-
         System.trace = true;
 
         // This is what allows us to register this site as a
@@ -20,12 +19,14 @@
         navigator.registerProtocolHandler("magnet", window.location.origin + "/?uri=%s", "Magnet Links");
 
         System.import('style/style');
-        System.import('app/strmr').then(function (module) {
+        System.import('app/app').then(function (module) {
             angular.bootstrap(document, [module.name]);
         });
     </script>
 </head>
 <body ng-cloak ng-controller="AppController as ctrl">
+    <div ui-view></div>
+<!--
 <div class="container">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -224,6 +225,6 @@
         </div>
     </div>
 </div>
-
+-->
 </body>
 </html>
