--- a/front/app/routes/index.layout.html
+++ b/front/app/routes/index.layout.html
@@ -6,8 +6,8 @@
         <li class="nav-item">
             <a class="nav-link" href="#/library/">Library</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#/magnet/">Add Magnet</a>
+        <li class="nav-item" ng-if="current.magnet">
+            <a class="nav-link" href="#/magnet/">Magnet</a>
         </li>
     </ul>
 
