--- a/front/app/routes/magnet/magnet.html
+++ b/front/app/routes/magnet/magnet.html
@@ -2,11 +2,9 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-            <div class="auth-buttons">
-
+            <div class="row" ng-show="ctrl.state.part2">
                 <div>
-                    <div class="pull-right text-sm-right">
-
+                    <div class="col-md-12">
                         <button
                                 type="button"
                                 focus-on="save"
@@ -16,148 +14,41 @@
                             <i class="fa fa-spinner fa-spin"></i> Add to Your Library
                         </button>
 
-                        <span ng-if="ctrl.auth.validUser">
-                            <a target="_blank"
-                               tabindex="1"
-                               class="btn btn-primary-outline"
-                               href="{{ctrl.links.movies}}">Your Movies</a>
-                        </span>
-
+                        <span class="text-success pad-left-1" ng-bind="ctrl.msgs.success"></span>
                    </div>
-
                 </div>
             </div>
 
-            <form name="ctrl.form">
+            <div ng-cloak ng-show="ctrl.state.part1">
 
-                <div ng-cloak ng-show="ctrl.state.part1">
-
-                    <div class="form-group">
-                        <label>Magnet Link</label>
-                        <input
-                                type="text"
-                                name="link"
-                                focus-on="link"
-                                ng-model="ctrl.link"
-                                ng-change="ctrl.id()"
-                                ng-model-options="{ debounce: 250 }"
-                                class="form-control">
-                    </div>
+                <div class="form-group">
+                    <label>Magnet Link</label>
+                    <input
+                            type="text"
+                            name="link"
+                            focus-on="link"
+                            placeholder="magnet:"
+                            ng-model="ctrl.link"
+                            ng-change="ctrl.id()"
+                            ng-model-options="{ debounce: 250 }"
+                            class="form-control">
                 </div>
 
-
-                <div ng-cloak ng-show="ctrl.state.part2">
-
-                    <hr>
-
-                    <div class="row">
-
-                        <div class="col-md-5">
-
-                            <div class="poster">
-
-                                <div class="innards" ng-if="ctrl.state.poster">
-                                    <div class="cssload-loader"></div>
-                                </div>
-
-                                <img class="innards" ng-if="ctrl.poster.url" ng-src="{{ctrl.poster.url}}">
-
-                            </div>
-
-                            <table class="table table-striped table-sm">
-                                <tr>
-                                    <td>Resolution</td>
-                                    <td>{{ctrl.magnet.properties.resolution }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Quality</td>
-                                    <td>{{ctrl.magnet.properties.quality }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Codec</td>
-                                    <td>{{ctrl.magnet.properties.codec }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Group</td>
-                                    <td>{{ctrl.magnet.properties.group }}</td>
-                                </tr>
-                            </table>
-
-                        </div>
-
-                        <div class="col-md-7">
-                            <h2>{{ ctrl.magnet.properties.title }}
-                                <small>{{ ctrl.magnet.properties.year }}</small>
-                            </h2>
-
-                            <p class="blockquote">{{ctrl.info.Plot}}</p>
-
-                            <table class="table table-striped">
-                                <tr>
-                                    <td width="30%">Rated</td>
-                                    <td>{{ctrl.info.Rated }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Runtime</td>
-                                    <td>{{ctrl.info.Runtime }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Language</td>
-                                    <td>{{ctrl.info.Language }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Released</td>
-                                    <td>{{ctrl.info.Released }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Genre</td>
-                                    <td>{{ctrl.info.Genre }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Rating</td>
-                                    <td>{{ctrl.info.imdbRating }} <small>out of {{ctrl.info.imdbVotes}} votes</small></td>
-                                </tr>
-                                <tr>
-                                    <td>Director</td>
-                                    <td>{{ctrl.info.Director }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Featuring</td>
-                                    <td>{{ctrl.info.Actors }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Link</td>
-                                    <td><a target="_blank"
-                                           href="http://imdb.com/title/{{ctrl.info.imdbID}}">Open this Movie in IMDB</a>
-                                    </td>
-                                </tr>
-                            </table>
-
-
-                        </div>
-
-
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-md-12">
-
-                            <hr>
-
-
-                        </div>
-
-                    </div>
-
+                <div>
+                    <p class="text-danger" ng-bind="ctrl.msgs.error"></p>
                 </div>
-
-            </form>
-
-            <div>
-                <p class="text-success" ng-bind="ctrl.msgs.success"></p>
-                <p class="text-danger" ng-bind="ctrl.msgs.error"></p>
             </div>
+
+            <div ng-cloak ng-show="ctrl.state.part2">
+
+                <hr>
+
+                <movie magnet="ctrl.magnet"></movie>
+
+                <hr>
+
+            </div>
+
 
         </div>
     </div>
