--- a/front/index.html
+++ b/front/index.html
@@ -10,13 +10,14 @@
     }</style>
     <script src="jspm/system.js"></script>
     <script src="config.js"></script>
+    <script src="bundle.js"></script>
     <script>
         System.trace = true;
 
         // This is what allows us to register this site as a
         // handler for magnet protocol links.  Works!
 
-        navigator.registerProtocolHandler("magnet", window.location.origin + "/?uri=%s", "Magnet Links");
+        navigator.registerProtocolHandler("magnet", window.location.origin + "/#/magnet/?uri=%s", "Magnet Links");
 
         System.import('style/style');
         System.import('app/app').then(function (module) {
@@ -26,205 +27,5 @@
 </head>
 <body ng-cloak ng-controller="AppController as ctrl">
     <div ui-view></div>
-<!--
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-
-            <h1>strmr</h1>
-
-            <div class="auth-buttons">
-                <div ng-if="!ctrl.auth.loggedIn || ctrl.auth.loggedIn && ctrl.auth.busy"
-                     ng-class="{busy: ctrl.auth.busy}">
-                    <button
-                            tabindex="1"
-                            focus-on="login"
-                            class="btn btn-primary"
-                            ng-disabled="ctrl.state.login"
-                            ng-click="ctrl.login()">
-                        <i class="fa fa-spinner fa-spin"></i> Login
-                    </button>
-                </div>
-
-                <div ng-if="!ctrl.auth.busy && ctrl.auth.loggedIn" class="clearfix">
-
-                    <div class="pull-left">
-
-                        <a href=""
-                           tabindex="1"
-                           class="btn btn-primary-outline"
-                           ng-click="ctrl.auth.logout()">Logout</a>
-
-
-
-                    </div>
-
-                    <div class="pull-right text-sm-right">
-
-
-                        <button
-                                type="button"
-                                focus-on="save"
-                                class="btn btn-primary"
-                                ng-disabled="ctrl.state.busy"
-                                ng-click="ctrl.save()">
-                            <i class="fa fa-spinner fa-spin"></i> Add to Your Library
-                        </button>
-
-
-
-                        <span ng-if="ctrl.auth.validUser">
-                            <a target="_blank"
-                               tabindex="1"
-                               class="btn btn-primary-outline"
-                               href="{{ctrl.links.movies}}">Your Movies</a>
-                        </span>
-
-                   </div>
-
-                    <div ng-if="!ctrl.auth.busy && !ctrl.auth.validUser">
-                        <br/>
-                        <div class="alert alert-danger">
-                            <strong>No Dice.</strong> You are logged in, but you do not have access.
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <form name="ctrl.form" ng-if="ctrl.auth.validUser">
-
-                <div ng-cloak ng-show="ctrl.state.part1">
-
-                    <div class="form-group">
-                        <label>Magnet Link</label>
-                        <input
-                                type="text"
-                                name="link"
-                                focus-on="link"
-                                ng-model="ctrl.link"
-                                ng-change="ctrl.id()"
-                                ng-model-options="{ debounce: 250 }"
-                                class="form-control">
-                    </div>
-                </div>
-
-
-                <div ng-cloak ng-show="ctrl.state.part2">
-
-                    <hr>
-
-                    <div class="row">
-
-                        <div class="col-md-5">
-
-                            <div class="poster">
-
-                                <div class="innards" ng-if="ctrl.state.poster">
-                                    <div class="cssload-loader"></div>
-                                </div>
-
-                                <img class="innards" ng-if="ctrl.poster.url" ng-src="{{ctrl.poster.url}}">
-
-                            </div>
-
-                            <table class="table table-striped table-sm">
-                                <tr>
-                                    <td>Resolution</td>
-                                    <td>{{ctrl.magnet.properties.resolution }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Quality</td>
-                                    <td>{{ctrl.magnet.properties.quality }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Codec</td>
-                                    <td>{{ctrl.magnet.properties.codec }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Group</td>
-                                    <td>{{ctrl.magnet.properties.group }}</td>
-                                </tr>
-                            </table>
-
-                        </div>
-
-                        <div class="col-md-7">
-                            <h2>{{ ctrl.magnet.properties.title }}
-                                <small>{{ ctrl.magnet.properties.year }}</small>
-                            </h2>
-
-                            <p class="blockquote">{{ctrl.info.Plot}}</p>
-
-                            <table class="table table-striped">
-                                <tr>
-                                    <td width="30%">Rated</td>
-                                    <td>{{ctrl.info.Rated }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Runtime</td>
-                                    <td>{{ctrl.info.Runtime }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Language</td>
-                                    <td>{{ctrl.info.Language }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Released</td>
-                                    <td>{{ctrl.info.Released }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Genre</td>
-                                    <td>{{ctrl.info.Genre }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Rating</td>
-                                    <td>{{ctrl.info.imdbRating }} <small>out of {{ctrl.info.imdbVotes}} votes</small></td>
-                                </tr>
-                                <tr>
-                                    <td>Director</td>
-                                    <td>{{ctrl.info.Director }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Featuring</td>
-                                    <td>{{ctrl.info.Actors }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Link</td>
-                                    <td><a target="_blank"
-                                           href="http://imdb.com/title/{{ctrl.info.imdbID}}">Open this Movie in IMDB</a>
-                                    </td>
-                                </tr>
-                            </table>
-
-
-                        </div>
-
-
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-md-12">
-
-                            <hr>
-
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </form>
-
-            <div>
-                <p class="text-success" ng-bind="ctrl.msgs.success"></p>
-                <p class="text-danger" ng-bind="ctrl.msgs.error"></p>
-            </div>
-
-        </div>
-    </div>
-</div>
--->
 </body>
 </html>
