notifications if movie is already in library

--- a/front/app/routes/index.layout.html
+++ b/front/app/routes/index.layout.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-light bg-faded">
 
-    <a class="navbar-brand" href="#">strmr</a>
+    <a class="navbar-brand" href="#">Strmr</a>
 
     <ul class="nav navbar-nav" ng-if="user">
         <li class="nav-item">
